# Kosha

./: .gitignore  README.md  alembic.ini  compose.yml  pyproject.toml
backend/: Dockerfile  README.md  database.py  init_db.py  models.py
backend/api/: dependencies.py  main.py  schemas.py
backend/api/routes/: digest.py  feedback.py  ingest.py  search.py  sources.py  youtube_oauth.py
backend/api/schemas/: __init__.py  common.py  digest.py  feedback.py  items.py  search.py  sources.py
backend/core/: config.py  constants.py  logging.py
backend/db/: database.py  models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 6decf5361049_initial_schema.py  a1b2c3d4e5f6_cascade_interactions_item.py
backend/scripts/: init_db.py  run_ingestion.py
backend/services/: embedding.py  ingestion.py  items.py
backend/worker/: celery_app.py  tasks.py
connectors/: README.md  base.py  registry.py
connectors/dev/: github.py
connectors/discovery/: reddit.py
connectors/newsletters/: rss.py  substack.py  test_rss.py
connectors/papers/: README.md  arxiv.py
connectors/podcasts/: spotify.py
connectors/social/: hackernews.py  reddit.py
connectors/subscriptions/: arxiv.py  email_imap.py  substack.py  youtube.py
connectors/youtube/: youtube_subscriptions.py
frontend/: Dockerfile  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/items/: ItemCard.tsx  ItemDetail.tsx  ItemList.tsx  TeachStrip.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  skeleton.tsx  toast.tsx
frontend/src/hooks/: useItems.ts  useSearch.ts  useSources.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: DigestPage.tsx  ReadingListPage.tsx  SavedPage.tsx  SearchPage.tsx  SettingsPage.tsx  SourcesPage.tsx
frontend/src/stores/: uiStore.ts
frontend/src/types/: index.ts
schemas/: connector_output.py
tests/backend/: seed_data.py  test_run_ingestion.py
tests/backend/db/: check_db.py
