[project]
name = "kosha"
version = "0.1.0"
description = "Fully Open Source Personalized Content Streamer"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",

    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Connectors — shared
    "feedparser>=6.0.11",
    "markdownify>=0.13.0",
    "httpx>=0.27.0",

    # Connectors — Spotify
    "spotipy>=2.23.0",

    # Connectors — YouTube
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "connectors", "schemas"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "connectors", "schemas"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
